--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name="ro.pub.cs.systems.eim.Colocviu1_245.Colocviu1_245Service"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity android:name=".Colocviu1_245SecondaryActivity">
             <intent-filter>
-                <action android:name="ro.pub.cs.systems.eim.Colocviu1_245.intent.action.Colocviu1_245SecondaryActivity"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="ro.pub.cs.systems.eim.Colocviu1_245.intent.action.Colocviu1_245SecondaryActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".Colocviu1_245MainActivity">
